--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -103,19 +103,24 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">26.09.2014 - 28.09.2014</span>	<span class="where">Asheville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Asheville Juggling Festival</a>)</li>
     <li><span class="datum">17.10.2014 - 19.10.2014</span>	<span class="where">Cleveland, OH</span> (<a href="https://sites.google.com/a/case.edu/juggling/cleveland-cirus">Cleveland Circus</a>)</li>
     <li><span class="datum">07.11.2014 - 09.11.2014</span>	<span class="where">Sewickley, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
-    <li><span class="datum">27.12.2014 - 03.01.2015</span>	<span class="where">Someren</span> (Pass-Out)</li>
+    <li><span class="datum">27.12.2014 - 03.01.2015</span>	<span class="where">Someren, The Netherlands</span> (Pass-Out)</li>
     <li><span class="datum">16.01.2015 - 18.02.2015</span>	<span class="where">Madison, WI</span> (<a href="http://madjugglers.com/MadFest">The 47th Annual MadFest Juggling Festival</a>)</li>
     <li><span class="datum">06.02.2015 - 08.02.2015</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals/gh15.htm">37th Annual Groundhog Day Jugglers Festival</a>)</li>
+    <li><span class="datum">06.03.2015 - 08.03.2015</span>  <span class="where">Lehighton, PA</span> (<a href="http://poconojugglecircusartsfest.webstarts.com/">Pocono Juggle/Circus Arts Fest 2015</a>)</li>
+    <li><span class="datum">10.04.2015 - 12.04.2015</span>  <span class="where">Rochester, NY</span> (<a href="http://ritjuggle.blogspot.com/">The 38th RIT Spring Juggle-In</a>)</li>
+    <li><span class="datum">05.06.2014 - 12.06.2014</span>  <span class="where">Burlington, WI</span> (Pass-Out)</li>
+    <li><span class="datum">19.06.2014 - 21.06.2014</span>  <span class="where">Boulder, CO</span> (<a href="http://www.boulderjuggling.com/jugglingfestival/">11th Boulder Juggling Festival</a>)</li>
+    <li><span class="datum">20.07.2015 - 26.07.2015</span>  <span class="where">Quebec City</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
+    <li><span class="datum">25.09.2015 - 27.09.2015</span>  <span class="where">Asheville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Asheville Juggling Festival</a>)</li>
+    <li><span class="datum">03.10.2015 - 04.10.2015</span>  <span class="where">Philadelphia, PA</span> (<a href="http://www.phillyjugglers.com/philly-fest">Philly Fest</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">06.03.2015 - 08.03.2015</span>	<span class="where">Lehighton, PA</span> (<a href="http://poconojugglecircusartsfest.webstarts.com/">Pocono Juggle/Circus Arts Fest 2015</a>)</li>
-    <li><span class="datum">10.04.2015 - 12.04.2015</span>	<span class="where">Rochester, NY</span> (<a href="http://ritjuggle.blogspot.com/">The 38th RIT Spring Juggle-In</a>)</li>
-    <li><span class="datum">20.07.2015 - 26.07.2015</span>	<span class="where">Quebec City</span> (<a href="http://www.juggle.org/ija/festival/">IJA Festival</a>)</li>
-    <li><span class="datum">01.08.2015 - 09.08.2015</span>	<span class="where">Bruneck, Italy</span> (<a href="http://ejc2014.org/">ECJ 2015</a>)</li>
+    <li><span class="datum">06.11.2014 - 08.11.2014</span>  <span class="where">Monaca, PA</span> (<a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>)</li>
     <li><span class="datum">27.12.2015 - 03.01.2016</span>	<span class="where">Koenigswiesen</span> (Pass-Out)</li>
+    <li><span class="datum">30.07.2016 - 07.08.2016</span>  <span class="where">Almere, Netherlands</span> (<a href="http://ejc2014.org/">ECJ 2015</a>)</li>
 </ul>
 
 <h1>Misc</h1>
