--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -16,7 +16,7 @@
 <p>Where to juggle in Pittsburgh (last updated 2015-03-01):</p>
 <ul style="">
     <li><strong>Carnegie Mellon Masters of Flying Objects</strong><br />
-    Meeting Sundays 3-5pm and Wednesdays 5:30-7pm on or near the CMU campus. In nice summer weather, meetings are typically outside on the cut in front of Purnell; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Wednesday meeting is in a changing location on campus; during the summer break Sunday meetings are typically on Schenley Plaza. Growing group of students and nonstudents. See news section on the website or join mailing list for room announcements and short-term updates. <br />
+    Meeting Sundays 3-5pm and Thursdays evening on or near the CMU campus. In nice summer weather, Thursday meetings are typically outside on the cut in front of Purnell and Sunday meetings are on Schenley Plaza in front of the Carnegie Library; in the winter and in bad weather the Sunday meeting is the atrium of Newell Simon Hall and the Wednesday meeting is in a changing location on campus. Growing group of students and nonstudents. See news section on the website or join mailing list for room announcements and short-term updates. <br />
         <a href="http://www.andrew.cmu.edu/user/juggle/">website</a>, <a href="https://lists.andrew.cmu.edu/mailman/listinfo/juggling-members">mailing list</a>, <a href="http://www.openstreetmap.org/?mlat=40.443&amp;mlon=-79.94343&amp;zoom=16&amp;layers=M">map</a>
     </li>
     <li><strong>Pittsburgh Show Offs</strong><br />
@@ -31,6 +31,7 @@
         Jugglers meeting about 45min outside Pittsburgh in Baden, PA (Villa St. Joseph, Heritage Hall). Small group meeting regularly Sundays 3-5:30pm. Organizers of the annual <a href="http://www.allinjest.com/jugglingfestclub.html">Not Quite Pittsburgh Juggling Festival</a>.<br />
         <a href="http://www.allinjest.com/jugglingfestclub.html">website</a>, <a href="http://www.openstreetmap.org/?mlat=40.65079&amp;mlon=-80.23315&amp;zoom=12&amp;layers=M">map</a>
         </li>
+        <li><strong>Other circusy meetings</strong><br /> <a href="https://www.facebook.com/thickbikes/events">THICK bikes</a> organizes a weekly unicycling meeting at the South Side near the Hoffbraeuhaus, Friday 6-8pmi (indoor alternative in the winter). <a href="https://www.facebook.com/groups/79699399846/">Slacklining</a> and <a href="https://www.facebook.com/groups/1451145225119221/">Acrobatics/AcroYoga</a> tend to happen on Sunday afternoon in Schenley Plaza; the <a href="https://www.facebook.com/groups/1027661053915924/">Pittsburgh Flow Collective</a> meets in the evening nearby in Schenley Park. <a href="http://www.pittsburghaerialsilks.com/">Aerial classes</a> happen regularly in Bloomfield.</li>
 </ul>
 <p>
 If you know other regular meetings, let me know about it (mail: kaestner (at) cmu.edu).
@@ -119,15 +120,25 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">07.01.2016 - 10.01.2016</span>	<span class="where">Quebec City</span> (<a href="http://www.turbo418.com/turbo418-avenir.php?lang=A">Turbo Fest 10</a>)</li>
     <li><span class="datum">05.02.2016 - 07.02.2016</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals/gh16.htm">38th Annual Groundhog Day Jugglers Festival</a>)</li>
     <li><span class="datum">12.02.2016 - 14.02.2016</span>	<span class="where">St. Paul, MI</span> (<a href="http://mondofest.org/">Mondo XXVII Festival</a>)</li>
+    <li><span class="datum">08.04.2016 - 10.04.2016</span>  <span class="where">Rochester, NY</span> (<a href="http://ritjuggle.blogspot.com/">The 39th RIT Spring Juggle-In</a>)</li>
+    <li><span class="datum">06.05.2016 - 08.05.2016</span>	<span class="where">College Park, MD</span> (<a href="https://www.facebook.com/events/1540482139595491/">Congress of Jugglers 2016</a>)</li>
+    <li><span class="datum">29.05.2016 - 03.06.2016</span>  <span class="where">Hickory, NC</span> (Pass-Out)</li>
+    <li><span class="datum">30.07.2016 - 07.08.2016</span>  <span class="where">Almere, Netherlands</span> (<a href="http://ejc2016.org/">ECJ 2016</a>)</li>
+    <li><span class="datum">23.09.2016 - 25.09.2016</span>  <span class="where">Asheville, NC</span> (<a href="http://www.ashevillejugglingfestival.com/">Asheville Juggling Festival</a>)</li>
+    <li><span class="datum">30.09.2016 - 02.10.2016</span>	<span class="where">Cleveland, OH</span> (<a href="https://sites.google.com/a/case.edu/juggling/cleveland-cirus">Cleveland Circus</a>)</li>
+    <li><span class="datum">22.10.2016 - 23.10.2016</span>  <span class="where">Philadelphia, PA</span> (<a href="http://www.phillyjugglers.com/philly-fest">Philly Fest</a>)</li>
+    <li><span class="datum">28.10.2016 - 30.10.2016</span>  <span class="where">St. Louis, MO</span> (<a href="https://www.facebook.com/events/1056047587764237/">St. Louis Jugglefest</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">08.04.2016 - 10.04.2016</span>  <span class="where">Rochester, NY</span> (<a href="http://ritjuggle.blogspot.com/">The 39th RIT Spring Juggle-In</a>)</li>
-    <li><span class="datum">06.05.2016 - 08.05.2016</span>	<span class="where">College Park, MD</span> (<a href="https://www.facebook.com/events/1540482139595491/">Congress of Jugglers 2016</a>)</li>
-    <li><span class="datum">29.05.2016 - 03.06.2016</span>  <span class="where">Hickory, NC</span> (Pass-Out)</li>
-    <li><span class="datum">30.07.2016 - 07.08.2016</span>  <span class="where">Almere, Netherlands</span> (<a href="http://ejc2014.org/">ECJ 2015</a>)</li>
+    <li><span class="datum">27.12.2016 - 02.01.2017</span>  <span class="where">Cambridge</span> (Pass-Out)</li>
+    <li><span class="datum">03.02.2017 - 05.02.2017</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals">39th Annual Groundhog Day Jugglers Festival</a>)</li>
+    <li><span class="datum">10.02.2017 - 12.02.2017</span>	<span class="where">St. Paul, MI</span> (<a href="http://mondofest.org/">Mondo XXVIII Festival</a>)</li>
+    <li><span class="datum">07.04.2017 - 09.04.2017</span>  <span class="where">Rochester, NY</span> (<a href="http://ritjuggle.blogspot.com/">The 40th RIT Spring Juggle-In</a>)</li>
+    <li><span class="datum">22.07.2017 - 30.07.2017</span>  <span class="where">Lublin, Poland</span> (<a href="http://ejc2017.org/">ECJ 2017</a>)</li>
+    <li><span class="datum">03.08.2018 - 11.08.2019</span>  <span class="where">Newark, UK</span> (<a href="http://ejc2019.org/">ECJ 2019</a>)</li>
 </ul>
 
 <h1>Misc</h1>
