--- a/src/main/site/juggling.xhtml
+++ b/src/main/site/juggling.xhtml
@@ -128,17 +128,18 @@ Inspired by Iain Murray's <a href="http://homepages.inf.ed.ac.uk/imurray2/juggli
     <li><span class="datum">30.09.2016 - 02.10.2016</span>	<span class="where">Cleveland, OH</span> (<a href="https://sites.google.com/a/case.edu/juggling/cleveland-cirus">Cleveland Circus</a>)</li>
     <li><span class="datum">22.10.2016 - 23.10.2016</span>  <span class="where">Philadelphia, PA</span> (<a href="http://www.phillyjugglers.com/philly-fest">Philly Fest</a>)</li>
     <li><span class="datum">28.10.2016 - 30.10.2016</span>  <span class="where">St. Louis, MO</span> (<a href="https://www.facebook.com/events/1056047587764237/">St. Louis Jugglefest</a>)</li>
+    <li><span class="datum">27.12.2016 - 02.01.2017</span>  <span class="where">Cambridge</span> (Pass-Out)</li>
+    <li><span class="datum">13.01.2017 - 15.02.2017</span>	<span class="where">Madison, WI</span> (<a href="http://madjugglers.com/MadFest">The 47th Annual MadFest Juggling Festival</a>)</li>
+    <li><span class="datum">03.02.2017 - 05.02.2017</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals">39th Annual Groundhog Day Jugglers Festival</a>)</li>
+    <li><span class="datum">10.02.2017 - 12.02.2017</span>	<span class="where">St. Paul, MI</span> (<a href="http://mondofest.org/">Mondo XXVIII Festival</a>)</li>
 </ul>
 
 <h2>Planned juggling conventions</h2>
 
 <ul>
-    <li><span class="datum">27.12.2016 - 02.01.2017</span>  <span class="where">Cambridge</span> (Pass-Out)</li>
-    <li><span class="datum">03.02.2017 - 05.02.2017</span>	<span class="where">Atlanta, GA</span> (<a href="http://atlantajugglers.org/festivals">39th Annual Groundhog Day Jugglers Festival</a>)</li>
-    <li><span class="datum">10.02.2017 - 12.02.2017</span>	<span class="where">St. Paul, MI</span> (<a href="http://mondofest.org/">Mondo XXVIII Festival</a>)</li>
-    <li><span class="datum">07.04.2017 - 09.04.2017</span>  <span class="where">Rochester, NY</span> (<a href="http://ritjuggle.blogspot.com/">The 40th RIT Spring Juggle-In</a>)</li>
+    <li><span class="datum">07.04.2017 - 13.04.2017</span>  <span class="where">Nottingham</span> (<a href="https://bjc2017.co.uk/">BJC 2016</a>)</li>
     <li><span class="datum">22.07.2017 - 30.07.2017</span>  <span class="where">Lublin, Poland</span> (<a href="http://ejc2017.org/">ECJ 2017</a>)</li>
-    <li><span class="datum">03.08.2018 - 11.08.2019</span>  <span class="where">Newark, UK</span> (<a href="http://ejc2019.org/">ECJ 2019</a>)</li>
+    <li><span class="datum">03.08.2019 - 11.08.2019</span>  <span class="where">Newark, UK</span> (<a href="http://ejc2019.org/">ECJ 2019</a>)</li>
 </ul>
 
 <h1>Misc</h1>
